# rocket-science

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  fpm.toml  generate_graphs.sh  legacy_rocket.f90  mod1.f90  paper.md  rocket.f90  rocket.inp
.github/workflows/: CI.yml
app/: CMakeLists.txt  generate_graphs.sh  plot.gp
app/legacy/: CMakeLists.txt  main.f90
app/refurbished/: CMakeLists.txt  main.f90
integration_tests/: CMakeLists.txt
integration_tests/refurbished/: CMakeLists.txt
integration_tests/refurbished-integration/: CMakeLists.txt  comparison_test.f90  results_interface.f90
src/: CMakeLists.txt
src/legacy/: CMakeLists.txt  mod1.f90  rocket.f90
src/refurbished/: CMakeLists.txt  refurbished_mod1.f90  rocket.f90
submodules/: CMakeLists.txt
tests/integration/refurbished/: comparison_test.f90  main.f90
tests/integration/refurbished-integration/: comparison_test.f90  results_implementation.f90  results_interface.f90
tests/unit/refurbished/: CMakeLists.txt  example_test.f90  main.f90
unit_tests/: CMakeLists.txt
unit_tests/refurbished/: CMakeLists.txt
